fix hover issue on small screens; add media query for large screens

--- a/style.css
+++ b/style.css
@@ -425,6 +425,16 @@ display: none;}
   .play-button{height: 30px;}
   .movie-rotten-tomatoes-rating:after{font-size: 12px;}
 
-
 }
 
+/*for small screen sizes so that font doesn't get too small*/
+@media only screen and (min-width: 1300px) {
+  .module-movie {width: 12%;}
+  .module-movie {height: 0;}
+  .module-movie {padding-bottom: 24%;}
+  #module-movie-wrapper{width: 104%;}
+
+
+
+
+}
